# kicad

pcbnew/dialogs/: dialog_pns_settings.cpp
pcbnew/router/: CMakeLists.txt  TODO.txt  TODO.txt~  pns_algo_base.cpp  pns_algo_base.h  pns_diff_pair.cpp  pns_diff_pair.h  pns_diff_pair_placer.cpp  pns_diff_pair_placer.h  pns_dp_meander_placer.cpp  pns_dp_meander_placer.h  pns_dragger.cpp  pns_dragger.h  pns_index.h  pns_item.h  pns_layerset.h  pns_line.cpp  pns_line_placer.cpp  pns_line_placer.h  pns_logger.h  pns_meander.cpp  pns_meander_placer.cpp  pns_meander_placer.h  pns_meander_placer_base.cpp  pns_meander_placer_base.h  pns_meander_skew_placer.cpp  pns_meander_skew_placer.h  pns_node.cpp  pns_node.h  pns_optimizer.cpp  pns_optimizer.h  pns_placement_algo.h  pns_router.cpp  pns_router.h  pns_routing_settings.cpp  pns_routing_settings.h  pns_shove.cpp  pns_shove.h  pns_sizes_settings.cpp  pns_sizes_settings.h  (+13 more)
